re: #3024
git-svn-id: https://subversion.assembla.com/svn/smart-cs/trunk@7934 37136b1e-4cb1-4992-8394-573b48a9bdce